# trademl

./: .gitignore  MANIFEST.in  README.md  features.py  guild.yml  manage_guild.py  metrics_summary.py  outliers.py  requirements.txt  setup.cfg  setup.py  stationarity.py  vix_simple_strategy.py
data/: min_d_SPY.csv  min_d_SPY_clean.csv  sampe_Data.csv
strategies/: benchmark_strategies.py  vix_strategies.py
trademl/: __init__.py  backtrade_exuber.py  features.py  frac_diff.py  labeling_info.pkl  triple_barrier.py
trademl/algos/: .Renviron  dpseg.py  exuber.py  exuber_strategy.R  exuber_universe.py  ib_test.py
trademl/examples/: Contentio - trading strategy NN.html  Contentio - trading strategy NN.ipynb  Contentio - trading strategy v2.html  Contentio - trading strategy v2.ipynb
trademl/modeling/: .travis.yml  Output_Model.json  Output_Weights.p  __init__.py  add_alpha.R  add_features.py  backtest.py  backtesting_statistics.xlsx  data_import.py  extract.py  exuber.py  feature_importance.py  feature_importance_lab.py  features.py  frac_diff.R  frac_diff_and_struch_change.R  fsmts.R  labeling.py  labeling_info.pkl  lstm_clf_cloud.h5  lstm_features.csv  manage_guild.py  metrics_summary.py  min_d.csv  nltk_play.py  ohlcv_clean.py  ohlcv_clean_archive.py  ohlcv_features.py  outliers.py  pipelines.py  pipes_generator.py  prepare.py  prepare_3d.py  prepare_new.py  preprocessing.py  random_forest.json  rf_model.pkl  sell_fear.py  spy_db.py  stationarity.py  (+19 more)
trademl/strategies/: __init__.py  backtrader_data.py  benchmark_strategies.py  feature_importance_lab.py  (+6 more)
(+34 files in other folders)
