[metadata]
name = trademl
version = 0.0.0
license = MIT
description = Trade ML models
long_description = file: README.rst
author = Mislav Sagovac
author_email = mislav.sagovac@contentio.biz
classifiers=
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Financial Industry
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Office/Business :: Financial :: Investment

[options]
include_package_data = True
setup_requires =
    setuptools
python_requires =
    ~=3.7
install_requires =
    pandas==1.0.3
[options.packages.find]
where=src


[options.packages.find]
package_dir =
    trademl
exclude =
    contrib
