[metadata]
name = trademl
version = 0.0.1
license = MIT
description = Trade ML models
long_description = file: README.rst
author = Mislav Sagovac
author_email = mislav.sagovac@contentio.biz
platform = any

[options]
include_package_data = True
packages = find:
setup_requires =
    setuptools
python_requires =
    ~=3.7

[options.packages.find]
package_dir =
    trademl
